<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="@dimen/login_cardview_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="@dimen/card_main_margin"
    android:layout_marginTop="@dimen/card_top_margin"
    app:cardBackgroundColor="@color/colorNavyBlue"
    app:cardElevation="8dp"
    app:cardMaxElevation="16dp">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_element_horizontal_margin"
        android:layout_marginRight="@dimen/login_element_horizontal_margin"
        android:layout_marginTop="40dp"
        android:layout_width="@dimen/login_element_width"
        app:errorTextAppearance="@style/error_appearance"
        app:theme="@style/TextInputLayoutLogin">

        <EditText
            android:id="@+id/input_email"
            style="@style/EditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_reg"
            android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="@dimen/login_element_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_element_horizontal_margin"
            android:layout_marginRight="@dimen/login_element_horizontal_margin"
            android:layout_marginTop="20dp"
            app:errorTextAppearance="@style/error_appearance"
            app:theme="@style/TextInputLayoutLogin">

            <EditText
                android:id="@+id/input_password"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_reg"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:paddingLeft="24dp">

            <CheckBox
                android:id="@+id/cb_keep_me_signed_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/login.keep_me_sign_in"
                android:textColor="@color/colorWhite"
                android:theme="@style/CheckBoxLogin" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_sign_in"
            style="@style/ButtonLogin"
            android:layout_width="@dimen/login_element_width"
            android:layout_height="@dimen/login_element_height"
            android:layout_marginTop="58dp"
            android:background="@drawable/ripple_login"
            android:text="@string/login.sign_in" />


        <Button
            android:id="@+id/btn_sign_up"
            style="@style/ButtonLogin"
            android:layout_width="@dimen/login_element_width"
            android:layout_height="@dimen/login_element_height"
            android:layout_marginTop="12dp"
            android:background="@drawable/ripple_login_signup"
            android:text="@string/login.sign_up" />

        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="26dp"
            android:text="@string/login.forgot_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_normal" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

